src/styles/_topics.scss
/* Home - Topics
   ========================================================================== */

.topic-container  {
	margin: 48px auto;
}

.topic {
	display: block;
	margin: 20px auto 24px;
	text-align: center;
}

.topic-icon {
	display: block;
	margin: 0 auto 24px;
	color: $accent;
	font-size: 64px;
}

.topic-title {
	color: $primary;
	font-family: $font-family-secondary;
	font-size: 20px;
	font-weight: 700;
	text-transform: uppercase;
}

.topic-description {
	color: rgba($primary, .7);
	font-size: 16px;
	font-weight: 400;
	line-height: 24px;
	margin: 0 0 27px;
}

/* Docs - Topics
   ========================================================================== */

.docs-home-topics {
	background: rgba($accent, .1);
	padding: 72px 0 48px;
}

.docs-home-topics .topic-icon {
	border-radius: 50%;
	margin-bottom: 30px;
	height: 132px;
	width: 132px;
}

.docs-home-topics .topic-icon span {
	color: white;
	font-size: 64px;
	position: relative;
	top: 32px;
}

.docs-home-topics .topic {
	background: white;
	border-radius: 8px;
	padding: 48px 0;
	margin-top: 0;
}

.docs-home-topics .topic-title {
	font-family: $font-family-secondary;
	font-size: 24px;
	font-weight: 700;
	margin: 0;
	opacity: 1;
	text-transform: none;
}

.avatar-icon-16.avatar-large span {
	font-size: 48px;
}

@media (min-width: $screen-md-min) {
	.docs-home-topics {
		padding: 90px 0;
	}
}

.topic-js .topic-icon,
.topic-js.radial-out:before {
	background: #ffb700;
}

.topic-java .topic-icon,
.topic-java.radial-out:before {
	background: #ff536b;
}

.topic-curl .topic-icon,
.topic-curl.radial-out:before {
	background: #00a4ff;
}

/* Docs - Topics Animation
   ========================================================================== */

.radial-out {
  backface-visibility: hidden;
  overflow: hidden;
  position: relative;
  transform: translateZ(0);
}

.radial-out:before {
  content: "";
  position: absolute;
  z-index: -1;
  top: -50px;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 100%;
  transform: scale(0);
  transition: transform 0.4s ease-out;
}

.radial-out:hover:before,
.radial-out:focus:before {
  transform: scale(2);
}

.radial-out .topic-icon {
	transform: scale(1);
	transition: transform 0.4s ease-out;
}

.radial-out:hover .topic-icon,
.radial-out:focus .topic-icon {
  transform: scale(1.5);
}

.radial-out .topic-title {
	color: $accent;
	top: 0;
	position: relative;
	transition: all 0.4s ease-out;
}

.radial-out:hover .topic-title,
.radial-out:focus .topic-title {
  top: -10px;
  color: white;
}

